# DashboardAnalytics

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  fix_paths.py  pyproject.toml  pytest.ini  requirements.txt  test_etl_step_by_step.py  test_imports.py
dashboards/: Marketingdata.pbix
data/dimensional/dimensions/: dim_ad_content.csv  dim_campaign.csv  dim_creative.csv  dim_creative_size.csv  dim_date.csv  dim_device.csv  dim_placement.csv  dim_site.csv  dim_source.csv
data/dimensional/facts/: fact_ad_performance.csv  fact_web_analytics.csv
data/raw/google_analytics/: Raw GA Data.csv  Raw GA Data_202504.xlsx
data/raw/rfi/: RFI.csv
docs/: api_docs.md  data_dictionary.csv  data_model.md  powerbi_setup.md
src/: __init__.py
src/config/: __init__.py  settings.py
src/etl/: __init__.py  run_full_etl.py
src/etl/extract/: __init__.py  extract_and_clean.py
src/etl/load/: __init__.py  calculate_kpis.py  generate_analysis_report.py
src/etl/transform/: __init__.py  create_dimensions.py  create_facts.py
src/etl/utils/: __init__.py  utils.py  validate_data.py
tests/: test_basic.py
